--- a/Parallel_job_scheduling/Parallel_job_scheduling.ui
+++ b/Parallel_job_scheduling/Parallel_job_scheduling.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>480</width>
-    <height>335</height>
+    <width>475</width>
+    <height>338</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,21 +20,11 @@
       <x>0</x>
       <y>0</y>
       <width>471</width>
-      <height>279</height>
+      <height>285</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton">
-       <property name="text">
-        <string>Start</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QTextEdit" name="input_text_edit"/>
-     </item>
-     <item row="1" column="0">
+     <item row="2" column="0">
       <widget class="QFrame" name="frame">
        <property name="minimumSize">
         <size>
@@ -50,12 +40,33 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
+     <item row="1" column="0">
+      <widget class="QTextEdit" name="input_text_edit"/>
+     </item>
+     <item row="3" column="0">
       <widget class="QTextEdit" name="output_text_edit">
        <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
+     </item>
+     <item row="1" column="1">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QPushButton" name="open_file_btn">
+         <property name="text">
+          <string>Open File</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Start</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </widget>
@@ -65,7 +76,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>480</width>
+     <width>475</width>
      <height>21</height>
     </rect>
    </property>
