Cycle detection unit test

--- a/Parallel_job_scheduling/Parallel_job_scheduling.ui
+++ b/Parallel_job_scheduling/Parallel_job_scheduling.ui
@@ -46,7 +46,7 @@
        <item>
         <widget class="QPushButton" name="pushButton">
          <property name="text">
-          <string>Calculate Computational Graph</string>
+          <string>Calculate Dependency Tree</string>
          </property>
         </widget>
        </item>
