--- a/Parallel_job_scheduling/Parallel_job_scheduling.ui
+++ b/Parallel_job_scheduling/Parallel_job_scheduling.ui
@@ -10,6 +10,18 @@
     <height>339</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>518</width>
+    <height>339</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>518</width>
+    <height>339</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Parallel job scheduling</string>
   </property>
